UML done, added to Workflow.docx

--- a/SN-Program11-Smart-Pointers/SN-Program11-Smart-Pointers.vcxproj
+++ b/SN-Program11-Smart-Pointers/SN-Program11-Smart-Pointers.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SN-Program11-Smart-Pointers.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
