--- a/SN-Program11-Smart-Pointers/SN-Program11-Smart-Pointers.vcxproj.filters
+++ b/SN-Program11-Smart-Pointers/SN-Program11-Smart-Pointers.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SN-Program11-Smart-Pointers.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
